interpreter/myYacc/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> entry
Rule 1     entry -> start
Rule 2     start -> start stmt
Rule 3     start -> empty
Rule 4     stmt -> SPLIT
Rule 5     stmt -> expression SPLIT
Rule 6     stmt -> VAR ASSIGN LPAREN RPAREN block_format
Rule 7     stmt -> FUNC VAR LPAREN RPAREN block_format
Rule 8     stmt -> VAR ASSIGN LPAREN func_params RPAREN block_format
Rule 9     stmt -> FUNC VAR LPAREN func_params RPAREN block_format
Rule 10    func_params -> VAR
Rule 11    func_params -> func_params COMMA VAR
Rule 12    stmt -> VAR LPAREN RPAREN SPLIT
Rule 13    stmt -> VAR LPAREN expr_list RPAREN SPLIT
Rule 14    stmt -> PRINT LPAREN expr_list RPAREN SPLIT
Rule 15    stmt -> FOR VAR IN range block_format
Rule 16    range -> RANGE LPAREN expr_list RPAREN
Rule 17    stmt -> IF condition_list block_format
Rule 18    stmt -> IF condition_list block_format ELSE block_format
Rule 19    block_format -> START_BLOCK SPLIT block END_BLOCK SPLIT
Rule 20    block -> stmt
Rule 21    block -> block stmt
Rule 22    stmt -> VAR ASSIGN expression SPLIT
Rule 23    stmt -> VAR ASSIGN condition_list SPLIT
Rule 24    stmt -> if_assign IF condition_list ELSE expression SPLIT
Rule 25    if_assign -> VAR ASSIGN expression
Rule 26    expr_list -> expression
Rule 27    expr_list -> expr_list COMMA expression
Rule 28    condition_list -> expression
Rule 29    condition_list -> condition_list AND expression
Rule 30    condition_list -> condition_list OR expression
Rule 31    condition_list -> LPAREN condition_list RPAREN
Rule 32    expression -> expression ADD expression
Rule 33    expression -> expression REM expression
Rule 34    expression -> expression MUL expression
Rule 35    expression -> expression DIV expression
Rule 36    expression -> expression MOD expression
Rule 37    expression -> expression GT expression
Rule 38    expression -> expression LT expression
Rule 39    expression -> expression GE expression
Rule 40    expression -> expression LE expression
Rule 41    expression -> expression EQ expression
Rule 42    expression -> expression NE expression
Rule 43    expression -> expression POW expression
Rule 44    expression -> REM NUMBER
Rule 45    expression -> LPAREN expression RPAREN
Rule 46    expression -> TRUE
Rule 47    expression -> FALSE
Rule 48    expression -> NUMBER
Rule 49    expression -> STRING
Rule 50    expression -> VAR
Rule 51    empty -> <empty>

Terminals, with rules where they appear

ADD                  : 32
AND                  : 29
ASSIGN               : 6 8 22 23 25
COMMA                : 11 27
DIV                  : 35
ELSE                 : 18 24
END_BLOCK            : 19
EQ                   : 41
FALSE                : 47
FOR                  : 15
FUNC                 : 7 9
GE                   : 39
GT                   : 37
IF                   : 17 18 24
IN                   : 15
LE                   : 40
LPAREN               : 6 7 8 9 12 13 14 16 31 45
LT                   : 38
MOD                  : 36
MUL                  : 34
NE                   : 42
NUMBER               : 44 48
OR                   : 30
POW                  : 43
PRINT                : 14
RANGE                : 16
REM                  : 33 44
RPAREN               : 6 7 8 9 12 13 14 16 31 45
SPLIT                : 4 5 12 13 14 19 19 22 23 24
START_BLOCK          : 19
STRING               : 49
TRUE                 : 46
VAR                  : 6 7 8 9 10 11 12 13 15 22 23 25 50
error                : 

Nonterminals, with rules where they appear

block                : 19 21
block_format         : 6 7 8 9 15 17 18 18
condition_list       : 17 18 23 24 29 30 31
empty                : 3
entry                : 0
expr_list            : 13 14 16 27
expression           : 5 22 24 25 26 27 28 29 30 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 45
func_params          : 8 9 11
if_assign            : 24
range                : 15
start                : 1 2
stmt                 : 2 20 21

Parsing method: LALR

state 0

    (0) S' -> . entry
    (1) entry -> . start
    (2) start -> . start stmt
    (3) start -> . empty
    (51) empty -> .

    SPLIT           reduce using rule 51 (empty -> .)
    VAR             reduce using rule 51 (empty -> .)
    FUNC            reduce using rule 51 (empty -> .)
    PRINT           reduce using rule 51 (empty -> .)
    FOR             reduce using rule 51 (empty -> .)
    IF              reduce using rule 51 (empty -> .)
    REM             reduce using rule 51 (empty -> .)
    LPAREN          reduce using rule 51 (empty -> .)
    TRUE            reduce using rule 51 (empty -> .)
    FALSE           reduce using rule 51 (empty -> .)
    NUMBER          reduce using rule 51 (empty -> .)
    STRING          reduce using rule 51 (empty -> .)
    $end            reduce using rule 51 (empty -> .)

    entry                          shift and go to state 1
    start                          shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> entry .



state 2

    (1) entry -> start .
    (2) start -> start . stmt
    (4) stmt -> . SPLIT
    (5) stmt -> . expression SPLIT
    (6) stmt -> . VAR ASSIGN LPAREN RPAREN block_format
    (7) stmt -> . FUNC VAR LPAREN RPAREN block_format
    (8) stmt -> . VAR ASSIGN LPAREN func_params RPAREN block_format
    (9) stmt -> . FUNC VAR LPAREN func_params RPAREN block_format
    (12) stmt -> . VAR LPAREN RPAREN SPLIT
    (13) stmt -> . VAR LPAREN expr_list RPAREN SPLIT
    (14) stmt -> . PRINT LPAREN expr_list RPAREN SPLIT
    (15) stmt -> . FOR VAR IN range block_format
    (17) stmt -> . IF condition_list block_format
    (18) stmt -> . IF condition_list block_format ELSE block_format
    (22) stmt -> . VAR ASSIGN expression SPLIT
    (23) stmt -> . VAR ASSIGN condition_list SPLIT
    (24) stmt -> . if_assign IF condition_list ELSE expression SPLIT
    (32) expression -> . expression ADD expression
    (33) expression -> . expression REM expression
    (34) expression -> . expression MUL expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression GT expression
    (38) expression -> . expression LT expression
    (39) expression -> . expression GE expression
    (40) expression -> . expression LE expression
    (41) expression -> . expression EQ expression
    (42) expression -> . expression NE expression
    (43) expression -> . expression POW expression
    (44) expression -> . REM NUMBER
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . TRUE
    (47) expression -> . FALSE
    (48) expression -> . NUMBER
    (49) expression -> . STRING
    (50) expression -> . VAR
    (25) if_assign -> . VAR ASSIGN expression

    $end            reduce using rule 1 (entry -> start .)
    SPLIT           shift and go to state 5
    VAR             shift and go to state 7
    FUNC            shift and go to state 9
    PRINT           shift and go to state 10
    FOR             shift and go to state 11
    IF              shift and go to state 12
    REM             shift and go to state 14
    LPAREN          shift and go to state 8
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    NUMBER          shift and go to state 15
    STRING          shift and go to state 18

    stmt                           shift and go to state 4
    expression                     shift and go to state 6
    if_assign                      shift and go to state 13

state 3

    (3) start -> empty .

    SPLIT           reduce using rule 3 (start -> empty .)
    VAR             reduce using rule 3 (start -> empty .)
    FUNC            reduce using rule 3 (start -> empty .)
    PRINT           reduce using rule 3 (start -> empty .)
    FOR             reduce using rule 3 (start -> empty .)
    IF              reduce using rule 3 (start -> empty .)
    REM             reduce using rule 3 (start -> empty .)
    LPAREN          reduce using rule 3 (start -> empty .)
    TRUE            reduce using rule 3 (start -> empty .)
    FALSE           reduce using rule 3 (start -> empty .)
    NUMBER          reduce using rule 3 (start -> empty .)
    STRING          reduce using rule 3 (start -> empty .)
    $end            reduce using rule 3 (start -> empty .)


state 4

    (2) start -> start stmt .

    SPLIT           reduce using rule 2 (start -> start stmt .)
    VAR             reduce using rule 2 (start -> start stmt .)
    FUNC            reduce using rule 2 (start -> start stmt .)
    PRINT           reduce using rule 2 (start -> start stmt .)
    FOR             reduce using rule 2 (start -> start stmt .)
    IF              reduce using rule 2 (start -> start stmt .)
    REM             reduce using rule 2 (start -> start stmt .)
    LPAREN          reduce using rule 2 (start -> start stmt .)
    TRUE            reduce using rule 2 (start -> start stmt .)
    FALSE           reduce using rule 2 (start -> start stmt .)
    NUMBER          reduce using rule 2 (start -> start stmt .)
    STRING          reduce using rule 2 (start -> start stmt .)
    $end            reduce using rule 2 (start -> start stmt .)


state 5

    (4) stmt -> SPLIT .

    SPLIT           reduce using rule 4 (stmt -> SPLIT .)
    VAR             reduce using rule 4 (stmt -> SPLIT .)
    FUNC            reduce using rule 4 (stmt -> SPLIT .)
    PRINT           reduce using rule 4 (stmt -> SPLIT .)
    FOR             reduce using rule 4 (stmt -> SPLIT .)
    IF              reduce using rule 4 (stmt -> SPLIT .)
    REM             reduce using rule 4 (stmt -> SPLIT .)
    LPAREN          reduce using rule 4 (stmt -> SPLIT .)
    TRUE            reduce using rule 4 (stmt -> SPLIT .)
    FALSE           reduce using rule 4 (stmt -> SPLIT .)
    NUMBER          reduce using rule 4 (stmt -> SPLIT .)
    STRING          reduce using rule 4 (stmt -> SPLIT .)
    $end            reduce using rule 4 (stmt -> SPLIT .)
    END_BLOCK       reduce using rule 4 (stmt -> SPLIT .)


state 6

    (5) stmt -> expression . SPLIT
    (32) expression -> expression . ADD expression
    (33) expression -> expression . REM expression
    (34) expression -> expression . MUL expression
    (35) expression -> expression . DIV expression
    (36) expression -> expression . MOD expression
    (37) expression -> expression . GT expression
    (38) expression -> expression . LT expression
    (39) expression -> expression . GE expression
    (40) expression -> expression . LE expression
    (41) expression -> expression . EQ expression
    (42) expression -> expression . NE expression
    (43) expression -> expression . POW expression

    SPLIT           shift and go to state 19
    ADD             shift and go to state 20
    REM             shift and go to state 21
    MUL             shift and go to state 22
    DIV             shift and go to state 23
    MOD             shift and go to state 24
    GT              shift and go to state 25
    LT              shift and go to state 26
    GE              shift and go to state 27
    LE              shift and go to state 28
    EQ              shift and go to state 29
    NE              shift and go to state 30
    POW             shift and go to state 31


state 7

    (6) stmt -> VAR . ASSIGN LPAREN RPAREN block_format
    (8) stmt -> VAR . ASSIGN LPAREN func_params RPAREN block_format
    (12) stmt -> VAR . LPAREN RPAREN SPLIT
    (13) stmt -> VAR . LPAREN expr_list RPAREN SPLIT
    (22) stmt -> VAR . ASSIGN expression SPLIT
    (23) stmt -> VAR . ASSIGN condition_list SPLIT
    (50) expression -> VAR .
    (25) if_assign -> VAR . ASSIGN expression

    ASSIGN          shift and go to state 32
    LPAREN          shift and go to state 33
    SPLIT           reduce using rule 50 (expression -> VAR .)
    ADD             reduce using rule 50 (expression -> VAR .)
    REM             reduce using rule 50 (expression -> VAR .)
    MUL             reduce using rule 50 (expression -> VAR .)
    DIV             reduce using rule 50 (expression -> VAR .)
    MOD             reduce using rule 50 (expression -> VAR .)
    GT              reduce using rule 50 (expression -> VAR .)
    LT              reduce using rule 50 (expression -> VAR .)
    GE              reduce using rule 50 (expression -> VAR .)
    LE              reduce using rule 50 (expression -> VAR .)
    EQ              reduce using rule 50 (expression -> VAR .)
    NE              reduce using rule 50 (expression -> VAR .)
    POW             reduce using rule 50 (expression -> VAR .)


state 8

    (45) expression -> LPAREN . expression RPAREN
    (32) expression -> . expression ADD expression
    (33) expression -> . expression REM expression
    (34) expression -> . expression MUL expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression GT expression
    (38) expression -> . expression LT expression
    (39) expression -> . expression GE expression
    (40) expression -> . expression LE expression
    (41) expression -> . expression EQ expression
    (42) expression -> . expression NE expression
    (43) expression -> . expression POW expression
    (44) expression -> . REM NUMBER
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . TRUE
    (47) expression -> . FALSE
    (48) expression -> . NUMBER
    (49) expression -> . STRING
    (50) expression -> . VAR

    REM             shift and go to state 14
    LPAREN          shift and go to state 8
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    NUMBER          shift and go to state 15
    STRING          shift and go to state 18
    VAR             shift and go to state 35

    expression                     shift and go to state 34

state 9

    (7) stmt -> FUNC . VAR LPAREN RPAREN block_format
    (9) stmt -> FUNC . VAR LPAREN func_params RPAREN block_format

    VAR             shift and go to state 36


state 10

    (14) stmt -> PRINT . LPAREN expr_list RPAREN SPLIT

    LPAREN          shift and go to state 37


state 11

    (15) stmt -> FOR . VAR IN range block_format

    VAR             shift and go to state 38


state 12

    (17) stmt -> IF . condition_list block_format
    (18) stmt -> IF . condition_list block_format ELSE block_format
    (28) condition_list -> . expression
    (29) condition_list -> . condition_list AND expression
    (30) condition_list -> . condition_list OR expression
    (31) condition_list -> . LPAREN condition_list RPAREN
    (32) expression -> . expression ADD expression
    (33) expression -> . expression REM expression
    (34) expression -> . expression MUL expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression GT expression
    (38) expression -> . expression LT expression
    (39) expression -> . expression GE expression
    (40) expression -> . expression LE expression
    (41) expression -> . expression EQ expression
    (42) expression -> . expression NE expression
    (43) expression -> . expression POW expression
    (44) expression -> . REM NUMBER
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . TRUE
    (47) expression -> . FALSE
    (48) expression -> . NUMBER
    (49) expression -> . STRING
    (50) expression -> . VAR

    LPAREN          shift and go to state 41
    REM             shift and go to state 14
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    NUMBER          shift and go to state 15
    STRING          shift and go to state 18
    VAR             shift and go to state 35

    condition_list                 shift and go to state 39
    expression                     shift and go to state 40

state 13

    (24) stmt -> if_assign . IF condition_list ELSE expression SPLIT

    IF              shift and go to state 42


state 14

    (44) expression -> REM . NUMBER

    NUMBER          shift and go to state 43


state 15

    (48) expression -> NUMBER .

    SPLIT           reduce using rule 48 (expression -> NUMBER .)
    ADD             reduce using rule 48 (expression -> NUMBER .)
    REM             reduce using rule 48 (expression -> NUMBER .)
    MUL             reduce using rule 48 (expression -> NUMBER .)
    DIV             reduce using rule 48 (expression -> NUMBER .)
    MOD             reduce using rule 48 (expression -> NUMBER .)
    GT              reduce using rule 48 (expression -> NUMBER .)
    LT              reduce using rule 48 (expression -> NUMBER .)
    GE              reduce using rule 48 (expression -> NUMBER .)
    LE              reduce using rule 48 (expression -> NUMBER .)
    EQ              reduce using rule 48 (expression -> NUMBER .)
    NE              reduce using rule 48 (expression -> NUMBER .)
    POW             reduce using rule 48 (expression -> NUMBER .)
    RPAREN          reduce using rule 48 (expression -> NUMBER .)
    AND             reduce using rule 48 (expression -> NUMBER .)
    OR              reduce using rule 48 (expression -> NUMBER .)
    START_BLOCK     reduce using rule 48 (expression -> NUMBER .)
    IF              reduce using rule 48 (expression -> NUMBER .)
    COMMA           reduce using rule 48 (expression -> NUMBER .)
    ELSE            reduce using rule 48 (expression -> NUMBER .)


state 16

    (46) expression -> TRUE .

    SPLIT           reduce using rule 46 (expression -> TRUE .)
    ADD             reduce using rule 46 (expression -> TRUE .)
    REM             reduce using rule 46 (expression -> TRUE .)
    MUL             reduce using rule 46 (expression -> TRUE .)
    DIV             reduce using rule 46 (expression -> TRUE .)
    MOD             reduce using rule 46 (expression -> TRUE .)
    GT              reduce using rule 46 (expression -> TRUE .)
    LT              reduce using rule 46 (expression -> TRUE .)
    GE              reduce using rule 46 (expression -> TRUE .)
    LE              reduce using rule 46 (expression -> TRUE .)
    EQ              reduce using rule 46 (expression -> TRUE .)
    NE              reduce using rule 46 (expression -> TRUE .)
    POW             reduce using rule 46 (expression -> TRUE .)
    RPAREN          reduce using rule 46 (expression -> TRUE .)
    AND             reduce using rule 46 (expression -> TRUE .)
    OR              reduce using rule 46 (expression -> TRUE .)
    START_BLOCK     reduce using rule 46 (expression -> TRUE .)
    IF              reduce using rule 46 (expression -> TRUE .)
    COMMA           reduce using rule 46 (expression -> TRUE .)
    ELSE            reduce using rule 46 (expression -> TRUE .)


state 17

    (47) expression -> FALSE .

    SPLIT           reduce using rule 47 (expression -> FALSE .)
    ADD             reduce using rule 47 (expression -> FALSE .)
    REM             reduce using rule 47 (expression -> FALSE .)
    MUL             reduce using rule 47 (expression -> FALSE .)
    DIV             reduce using rule 47 (expression -> FALSE .)
    MOD             reduce using rule 47 (expression -> FALSE .)
    GT              reduce using rule 47 (expression -> FALSE .)
    LT              reduce using rule 47 (expression -> FALSE .)
    GE              reduce using rule 47 (expression -> FALSE .)
    LE              reduce using rule 47 (expression -> FALSE .)
    EQ              reduce using rule 47 (expression -> FALSE .)
    NE              reduce using rule 47 (expression -> FALSE .)
    POW             reduce using rule 47 (expression -> FALSE .)
    RPAREN          reduce using rule 47 (expression -> FALSE .)
    AND             reduce using rule 47 (expression -> FALSE .)
    OR              reduce using rule 47 (expression -> FALSE .)
    START_BLOCK     reduce using rule 47 (expression -> FALSE .)
    IF              reduce using rule 47 (expression -> FALSE .)
    COMMA           reduce using rule 47 (expression -> FALSE .)
    ELSE            reduce using rule 47 (expression -> FALSE .)


state 18

    (49) expression -> STRING .

    SPLIT           reduce using rule 49 (expression -> STRING .)
    ADD             reduce using rule 49 (expression -> STRING .)
    REM             reduce using rule 49 (expression -> STRING .)
    MUL             reduce using rule 49 (expression -> STRING .)
    DIV             reduce using rule 49 (expression -> STRING .)
    MOD             reduce using rule 49 (expression -> STRING .)
    GT              reduce using rule 49 (expression -> STRING .)
    LT              reduce using rule 49 (expression -> STRING .)
    GE              reduce using rule 49 (expression -> STRING .)
    LE              reduce using rule 49 (expression -> STRING .)
    EQ              reduce using rule 49 (expression -> STRING .)
    NE              reduce using rule 49 (expression -> STRING .)
    POW             reduce using rule 49 (expression -> STRING .)
    RPAREN          reduce using rule 49 (expression -> STRING .)
    AND             reduce using rule 49 (expression -> STRING .)
    OR              reduce using rule 49 (expression -> STRING .)
    START_BLOCK     reduce using rule 49 (expression -> STRING .)
    IF              reduce using rule 49 (expression -> STRING .)
    COMMA           reduce using rule 49 (expression -> STRING .)
    ELSE            reduce using rule 49 (expression -> STRING .)


state 19

    (5) stmt -> expression SPLIT .

    SPLIT           reduce using rule 5 (stmt -> expression SPLIT .)
    VAR             reduce using rule 5 (stmt -> expression SPLIT .)
    FUNC            reduce using rule 5 (stmt -> expression SPLIT .)
    PRINT           reduce using rule 5 (stmt -> expression SPLIT .)
    FOR             reduce using rule 5 (stmt -> expression SPLIT .)
    IF              reduce using rule 5 (stmt -> expression SPLIT .)
    REM             reduce using rule 5 (stmt -> expression SPLIT .)
    LPAREN          reduce using rule 5 (stmt -> expression SPLIT .)
    TRUE            reduce using rule 5 (stmt -> expression SPLIT .)
    FALSE           reduce using rule 5 (stmt -> expression SPLIT .)
    NUMBER          reduce using rule 5 (stmt -> expression SPLIT .)
    STRING          reduce using rule 5 (stmt -> expression SPLIT .)
    $end            reduce using rule 5 (stmt -> expression SPLIT .)
    END_BLOCK       reduce using rule 5 (stmt -> expression SPLIT .)


state 20

    (32) expression -> expression ADD . expression
    (32) expression -> . expression ADD expression
    (33) expression -> . expression REM expression
    (34) expression -> . expression MUL expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression GT expression
    (38) expression -> . expression LT expression
    (39) expression -> . expression GE expression
    (40) expression -> . expression LE expression
    (41) expression -> . expression EQ expression
    (42) expression -> . expression NE expression
    (43) expression -> . expression POW expression
    (44) expression -> . REM NUMBER
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . TRUE
    (47) expression -> . FALSE
    (48) expression -> . NUMBER
    (49) expression -> . STRING
    (50) expression -> . VAR

    REM             shift and go to state 14
    LPAREN          shift and go to state 8
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    NUMBER          shift and go to state 15
    STRING          shift and go to state 18
    VAR             shift and go to state 35

    expression                     shift and go to state 44

state 21

    (33) expression -> expression REM . expression
    (32) expression -> . expression ADD expression
    (33) expression -> . expression REM expression
    (34) expression -> . expression MUL expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression GT expression
    (38) expression -> . expression LT expression
    (39) expression -> . expression GE expression
    (40) expression -> . expression LE expression
    (41) expression -> . expression EQ expression
    (42) expression -> . expression NE expression
    (43) expression -> . expression POW expression
    (44) expression -> . REM NUMBER
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . TRUE
    (47) expression -> . FALSE
    (48) expression -> . NUMBER
    (49) expression -> . STRING
    (50) expression -> . VAR

    REM             shift and go to state 14
    LPAREN          shift and go to state 8
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    NUMBER          shift and go to state 15
    STRING          shift and go to state 18
    VAR             shift and go to state 35

    expression                     shift and go to state 45

state 22

    (34) expression -> expression MUL . expression
    (32) expression -> . expression ADD expression
    (33) expression -> . expression REM expression
    (34) expression -> . expression MUL expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression GT expression
    (38) expression -> . expression LT expression
    (39) expression -> . expression GE expression
    (40) expression -> . expression LE expression
    (41) expression -> . expression EQ expression
    (42) expression -> . expression NE expression
    (43) expression -> . expression POW expression
    (44) expression -> . REM NUMBER
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . TRUE
    (47) expression -> . FALSE
    (48) expression -> . NUMBER
    (49) expression -> . STRING
    (50) expression -> . VAR

    REM             shift and go to state 14
    LPAREN          shift and go to state 8
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    NUMBER          shift and go to state 15
    STRING          shift and go to state 18
    VAR             shift and go to state 35

    expression                     shift and go to state 46

state 23

    (35) expression -> expression DIV . expression
    (32) expression -> . expression ADD expression
    (33) expression -> . expression REM expression
    (34) expression -> . expression MUL expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression GT expression
    (38) expression -> . expression LT expression
    (39) expression -> . expression GE expression
    (40) expression -> . expression LE expression
    (41) expression -> . expression EQ expression
    (42) expression -> . expression NE expression
    (43) expression -> . expression POW expression
    (44) expression -> . REM NUMBER
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . TRUE
    (47) expression -> . FALSE
    (48) expression -> . NUMBER
    (49) expression -> . STRING
    (50) expression -> . VAR

    REM             shift and go to state 14
    LPAREN          shift and go to state 8
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    NUMBER          shift and go to state 15
    STRING          shift and go to state 18
    VAR             shift and go to state 35

    expression                     shift and go to state 47

state 24

    (36) expression -> expression MOD . expression
    (32) expression -> . expression ADD expression
    (33) expression -> . expression REM expression
    (34) expression -> . expression MUL expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression GT expression
    (38) expression -> . expression LT expression
    (39) expression -> . expression GE expression
    (40) expression -> . expression LE expression
    (41) expression -> . expression EQ expression
    (42) expression -> . expression NE expression
    (43) expression -> . expression POW expression
    (44) expression -> . REM NUMBER
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . TRUE
    (47) expression -> . FALSE
    (48) expression -> . NUMBER
    (49) expression -> . STRING
    (50) expression -> . VAR

    REM             shift and go to state 14
    LPAREN          shift and go to state 8
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    NUMBER          shift and go to state 15
    STRING          shift and go to state 18
    VAR             shift and go to state 35

    expression                     shift and go to state 48

state 25

    (37) expression -> expression GT . expression
    (32) expression -> . expression ADD expression
    (33) expression -> . expression REM expression
    (34) expression -> . expression MUL expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression GT expression
    (38) expression -> . expression LT expression
    (39) expression -> . expression GE expression
    (40) expression -> . expression LE expression
    (41) expression -> . expression EQ expression
    (42) expression -> . expression NE expression
    (43) expression -> . expression POW expression
    (44) expression -> . REM NUMBER
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . TRUE
    (47) expression -> . FALSE
    (48) expression -> . NUMBER
    (49) expression -> . STRING
    (50) expression -> . VAR

    REM             shift and go to state 14
    LPAREN          shift and go to state 8
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    NUMBER          shift and go to state 15
    STRING          shift and go to state 18
    VAR             shift and go to state 35

    expression                     shift and go to state 49

state 26

    (38) expression -> expression LT . expression
    (32) expression -> . expression ADD expression
    (33) expression -> . expression REM expression
    (34) expression -> . expression MUL expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression GT expression
    (38) expression -> . expression LT expression
    (39) expression -> . expression GE expression
    (40) expression -> . expression LE expression
    (41) expression -> . expression EQ expression
    (42) expression -> . expression NE expression
    (43) expression -> . expression POW expression
    (44) expression -> . REM NUMBER
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . TRUE
    (47) expression -> . FALSE
    (48) expression -> . NUMBER
    (49) expression -> . STRING
    (50) expression -> . VAR

    REM             shift and go to state 14
    LPAREN          shift and go to state 8
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    NUMBER          shift and go to state 15
    STRING          shift and go to state 18
    VAR             shift and go to state 35

    expression                     shift and go to state 50

state 27

    (39) expression -> expression GE . expression
    (32) expression -> . expression ADD expression
    (33) expression -> . expression REM expression
    (34) expression -> . expression MUL expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression GT expression
    (38) expression -> . expression LT expression
    (39) expression -> . expression GE expression
    (40) expression -> . expression LE expression
    (41) expression -> . expression EQ expression
    (42) expression -> . expression NE expression
    (43) expression -> . expression POW expression
    (44) expression -> . REM NUMBER
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . TRUE
    (47) expression -> . FALSE
    (48) expression -> . NUMBER
    (49) expression -> . STRING
    (50) expression -> . VAR

    REM             shift and go to state 14
    LPAREN          shift and go to state 8
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    NUMBER          shift and go to state 15
    STRING          shift and go to state 18
    VAR             shift and go to state 35

    expression                     shift and go to state 51

state 28

    (40) expression -> expression LE . expression
    (32) expression -> . expression ADD expression
    (33) expression -> . expression REM expression
    (34) expression -> . expression MUL expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression GT expression
    (38) expression -> . expression LT expression
    (39) expression -> . expression GE expression
    (40) expression -> . expression LE expression
    (41) expression -> . expression EQ expression
    (42) expression -> . expression NE expression
    (43) expression -> . expression POW expression
    (44) expression -> . REM NUMBER
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . TRUE
    (47) expression -> . FALSE
    (48) expression -> . NUMBER
    (49) expression -> . STRING
    (50) expression -> . VAR

    REM             shift and go to state 14
    LPAREN          shift and go to state 8
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    NUMBER          shift and go to state 15
    STRING          shift and go to state 18
    VAR             shift and go to state 35

    expression                     shift and go to state 52

state 29

    (41) expression -> expression EQ . expression
    (32) expression -> . expression ADD expression
    (33) expression -> . expression REM expression
    (34) expression -> . expression MUL expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression GT expression
    (38) expression -> . expression LT expression
    (39) expression -> . expression GE expression
    (40) expression -> . expression LE expression
    (41) expression -> . expression EQ expression
    (42) expression -> . expression NE expression
    (43) expression -> . expression POW expression
    (44) expression -> . REM NUMBER
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . TRUE
    (47) expression -> . FALSE
    (48) expression -> . NUMBER
    (49) expression -> . STRING
    (50) expression -> . VAR

    REM             shift and go to state 14
    LPAREN          shift and go to state 8
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    NUMBER          shift and go to state 15
    STRING          shift and go to state 18
    VAR             shift and go to state 35

    expression                     shift and go to state 53

state 30

    (42) expression -> expression NE . expression
    (32) expression -> . expression ADD expression
    (33) expression -> . expression REM expression
    (34) expression -> . expression MUL expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression GT expression
    (38) expression -> . expression LT expression
    (39) expression -> . expression GE expression
    (40) expression -> . expression LE expression
    (41) expression -> . expression EQ expression
    (42) expression -> . expression NE expression
    (43) expression -> . expression POW expression
    (44) expression -> . REM NUMBER
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . TRUE
    (47) expression -> . FALSE
    (48) expression -> . NUMBER
    (49) expression -> . STRING
    (50) expression -> . VAR

    REM             shift and go to state 14
    LPAREN          shift and go to state 8
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    NUMBER          shift and go to state 15
    STRING          shift and go to state 18
    VAR             shift and go to state 35

    expression                     shift and go to state 54

state 31

    (43) expression -> expression POW . expression
    (32) expression -> . expression ADD expression
    (33) expression -> . expression REM expression
    (34) expression -> . expression MUL expression
    (35) expression -> . expression DIV expression
    (36) expression -> . expression MOD expression
    (37) expression -> . expression GT expression
    (38) expression -> . expression LT expression
    (39) expression -> . expression GE expression
    (40) expression -> . expression LE expression
    (41) expression -> . expression EQ expression
    (42) expression -> . expression NE expression
    (43) expression -> . expression POW expression
    (44) expression -> . REM NUMBER
    (45) expression -> . LPAREN expression RPAREN
    (46) expression -> . TRUE
    (47) expression -> . FALSE
    (48) expression -> . NUMBER
    (49) expression -> . STRING
    (50) expression -> . VAR

    REM             shift and go to state 14
    LPAREN          shift and go to state 8
    TRUE            shift and go to state 16
    FALSE           shift and go to state 17
    NUMBER          shift and go to state 15
    STRING          shift and go to state 18
    VAR             shift and go to state 35

    expression                     shift and go to state 55

state 32
